/*
 * Copyright 2024, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * https://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine_examples.pingh.sessions;

import "spine/options.proto";

option (type_url_prefix) = "type.pingh.spine.io";
option java_package = "io.spine.examples.pingh.sessions.event";
option java_outer_classname = "EventsProto";
option java_multiple_files = true;

import "spine_examples/pingh/sessions/identifiers.proto";
import "spine_examples/pingh/github/values.proto";
import "spine/net/url.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

// User code received.
//
// To continue the login process, the user must enter this code
// on the verification GitHub page.
//
message UserCodeReceived {

    // The ID of user session.
    SessionId id = 1;

    // The code a user needs to enter on GitHub to confirm login to the Pingh app.
    spine_examples.pingh.github.UserCode user_code = 2 [(required) = true];

    // The URL where users need to enter their `user_code`.
    spine.net.Url verification_url = 3 [(required) = true];

    // The duration after which the `user_code` expires.
    google.protobuf.Duration expires_in = 4 [(required) = true];

    // The minimum duration that must pass before user can make a new access token request.
    google.protobuf.Duration interval = 5 [(required) = true];
}

// The user logged in.
message UserLoggedIn {

    // The ID of user session.
    SessionId id = 1;

    // The GitHub token obtained as a result of logging in.
    spine_examples.pingh.github.PersonalAccessToken token = 2 [(required) = true];
}

// The user has not entered their user code on GitHub,
// so logging into the Pingh app is not complete.
message UserIsNotLoggedIntoGitHub {

    // The ID of user session.
    SessionId id = 1;
}

// The personal access token was refreshed.
message TokenRefreshed {

    // The ID of user session.
    SessionId id = 1;

    // The GitHub token obtained as a result of the token refresh.
    spine_examples.pingh.github.PersonalAccessToken token = 2 [(required) = true];

    // The time when the access token was refreshed.
    google.protobuf.Timestamp when_refreshed = 3 [(required) = true];
}

// The user logged out.
message UserLoggedOut {

    // The ID of user session.
    SessionId id = 1;
}
